test/invalid/MissingTokenOnMethodParameterSet/MissingTokenOnMethodParameterSet.plume
/**
 * @author 35237, Marcos Vasco
 */
class MissingTokenOnMethodParameterSet extends Object is
  
  method calculate : (num Integer) -> Integer is
    if num < 0 then -num
    else num